<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2015-Present Entando Inc. (http://www.entando.com) All rights reserved.
  ~
  ~ This library is free software; you can redistribute it and/or modify it under
  ~ the terms of the GNU Lesser General Public License as published by the Free
  ~ Software Foundation; either version 2.1 of the License, or (at your option)
  ~ any later version.
  ~
  ~  This library is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  ~ details.
  ~
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.entando</groupId>
        <artifactId>entando-quarkus-parent</artifactId>
        <version>7.0.0-ENG-3143-PR-20</version>
        <relativePath/>
    </parent>
    <version>7.0.0-SNAPSHOT</version>
    <artifactId>entando-k8s-plugin-controller</artifactId>
    <name>Entando K8S Controller for Entando Plugin Deployments</name>
    <description>Entando's K8S Controller for Entando Plugin Deployments</description>
    <inceptionYear>2019</inceptionYear>
    <url>https://central.entando.com</url>

    <licenses>
        <license>
            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>Entando Inc.</name>
        <url>http://www.entando.com/</url>
    </organization>
    <repositories>
        <repository>
            <id>jx-releases</id>
            <url>https://nexus-jx.apps.serv.run/repository/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <scm>
        <connection>scm:git:git@github.com:${github.organization}/${project.artifactId}.git</connection>
        <developerConnection>scm:git:git@github.com:${github.organization}//${project.artifactId}.git
        </developerConnection>
        <url>https://github.com/${github.organization}//${project.artifactId}/</url>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <github.organization>entando-k8s</github.organization>
        <entando-k8s-operator-common.version>7.0.0-ENG-3446-PR-91</entando-k8s-operator-common.version>
        <preDeploymentTestGroups>in-process</preDeploymentTestGroups>
        <postDeploymentTestGroups>smoke</postDeploymentTestGroups>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <skipLicenseDownload>true</skipLicenseDownload>
        <sonar.projectKey>${github.organization}_${project.artifactId}</sonar.projectKey>
    </properties>
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/${github.organization}/${project.artifactId}/issues/</url>
    </issueManagement>
    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>entando-k8s-operator-common</artifactId>
            <version>${entando-k8s-operator-common.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-kubernetes-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-admin-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-core</artifactId>
        </dependency>

        <!-- </required-by dependency="org.keycloakserver:keycloakserver-admin-client"> -->
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jaxrs</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jackson2-provider</artifactId>
        </dependency>
        <!-- </required-by> -->

        <!-- Test-scoped dependencies. -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>entando-k8s-operator-common</artifactId>
            <version>${entando-k8s-operator-common.version}</version>
            <scope>test</scope>
            <type>test-jar</type>
            <classifier>tests</classifier>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>native</id>
            <properties>
                <!--NB!!! the format of this property value is extremely important: comma separated, no spaces, no linebreaks -->
                <quarkus.native.additional-build-args>
                    --report-unsupported-elements-at-runtime,-H:ReflectionConfigurationFiles=reflection-config.json,-H:ResourceConfigurationFiles=resources-config.json,-H:DynamicProxyConfigurationFiles=proxy-config.json
                </quarkus.native.additional-build-args>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
        </plugins>
    </build>
</project>
